cluster-components/jenkins.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - targetPort: 8080
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
